# Medical-Lookup

./: .gitignore  README.md  main.py  pyproject.toml
src/helpers/: buildCityCoordinatesMap.py  enrichDoctorWithCoordinates.py  findClosestDoctors.py  geocodeLocation.py  haversineDistance.py  loadDoctorsJson.py  parseDoctorQuery.py  rankDoctors.py  saveDoctors.py
src/models/: BuildCityCoordinatesMapArgs.py  Doctor.py  DoctorSearchQuery.py  EnrichDoctorWithCoordinatesArgs.py  FindClosestDoctorsArgs.py  GeocodeLocationArgs.py  HaversineDistanceArgs.py  LoadDoctorsJsonArgs.py  ParseDoctorQueryArgs.py  RankDoctorsArgs.py  SaveDoctorsArgs.py  SearchQueryRequest.py
src/prompts/: parseDoctorQuerySystem.j2
src/routes/: ingestDoctors.py  searchDoctors.py  searchQuery.py
