[project]
name = "medical-lookup"
version = "0.1.0"
description = "Looking for doctors"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "openai>=1.40",
    "jinja2>=3.1",
    "rapidfuzz>=3.9",
]

[tool.uv]
package = false
